--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -1,5 +1,5 @@
 name: Documentation Tests
-on: 
+on:
   pull_request:
     paths:
       - www/**
@@ -22,7 +22,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v3
         with:
-          node-version: "18"
+          node-version: "20.10.0"
           cache: "yarn"
 
       - name: Install dependencies
@@ -40,7 +40,7 @@ jobs:
           NODE_OPTIONS: "--max-old-space-size=8192"
           API_URL: "https://docs.medusajs.com"
         run: yarn build:docs
-        
+
   vale-docs:
     if: ${{ startsWith(github.head_ref, 'docs/') }}
     runs-on: ubuntu-latest
@@ -65,13 +65,13 @@ jobs:
         with:
           files: ${{ steps.directories.outputs.LIST }}
           fail_on_error: true
-          vale_flags: '--minAlertLevel=error'
+          vale_flags: "--minAlertLevel=error"
           reporter: github-pr-check
           token: ${{ github.token }}
           filter_mode: nofilter
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ github.token }}
-        
+
   vale-ui:
     if: ${{ startsWith(github.head_ref, 'docs/') }}
     runs-on: ubuntu-latest
@@ -96,13 +96,13 @@ jobs:
         with:
           files: ${{ steps.directories.outputs.LIST }}
           fail_on_error: true
-          vale_flags: '--minAlertLevel=error'
+          vale_flags: "--minAlertLevel=error"
           reporter: github-pr-check
           token: ${{ github.token }}
           filter_mode: nofilter
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ github.token }}
-        
+
   vale-api:
     if: ${{ startsWith(github.head_ref, 'docs/') }}
     runs-on: ubuntu-latest
@@ -127,13 +127,13 @@ jobs:
         with:
           files: ${{ steps.directories.outputs.LIST }}
           fail_on_error: true
-          vale_flags: '--minAlertLevel=error'
+          vale_flags: "--minAlertLevel=error"
           reporter: github-pr-check
           token: ${{ github.token }}
           filter_mode: nofilter
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ github.token }}
-        
+
   content-eslint:
     if: ${{ startsWith(github.head_ref, 'docs/') }}
     runs-on: ubuntu-latest
@@ -155,7 +155,7 @@ jobs:
       - name: Run Eslint
         working-directory: www
         run: yarn lint:content
-  
+
   code-docs-eslint:
     if: ${{ startsWith(github.head_ref, 'docs/') }}
     runs-on: ubuntu-latest
