--- a/.github/workflows/snapshot-this.yml
+++ b/.github/workflows/snapshot-this.yml
@@ -79,7 +79,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+          node-version: "20.10.0"
           cache: "yarn"
 
       - name: Install dependencies
