--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts,.tsx .",
     "prettier": "prettier",
     "jest": "jest",
-    "test": "turbo run test --no-daemon",
-    "test:integration:packages": "turbo run test:integration --no-daemon --filter='./packages/*'",
-    "test:integration:api": "turbo run test:integration --no-daemon --filter=integration-tests-api",
-    "test:integration:plugins": "turbo run test:integration --no-daemon --filter=integration-tests-plugins",
-    "test:integration:repositories": "turbo run test:integration --no-daemon --filter=integration-tests-repositories",
+    "test": "turbo run test --force --no-cache --no-daemon",
+    "test:integration:packages": "turbo run test:integration --force --no-cache --no-daemon --filter='./packages/*'",
+    "test:integration:api": "turbo run test:integration --force --no-cache --no-daemon --filter=integration-tests-api",
+    "test:integration:plugins": "turbo run test:integration --force --no-cache --no-daemon --filter=integration-tests-plugins",
+    "test:integration:repositories": "turbo run test:integration --force --no-cache --no-daemon --filter=integration-tests-repositories",
     "openapi:generate": "yarn ./packages/oas/oas-github-ci run ci --with-full-file",
     "medusa-oas": "yarn ./packages/oas/medusa-oas-cli run medusa-oas",
     "release:snapshot": "changeset publish --no-git-tags --snapshot --tag snapshot",
