--- a/packages/medusa-payment-stripe/package.json
+++ b/packages/medusa-payment-stripe/package.json
@@ -48,9 +48,9 @@
     "medusa-react": "^9.0.0"
   },
   "dependencies": {
+    "@medusajs/utils": "workspace:^",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "medusa-core-utils": "^1.2.0",
     "stripe": "^11.10.0"
   },
   "gitHead": "81a7ff73d012fda722f6e9ef0bd9ba0232d37808",
