--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -47,5 +47,8 @@
     "eslint": "^8.49.0",
     "react-docgen": "^7.0.1",
     "ts-node": "^10.9.1"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
