--- a/packages/medusa-plugin-segment/package.json
+++ b/packages/medusa-plugin-segment/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "test": "jest --passWithNoTests src",
-    "build": "rimraf dist && tsc -p ./tsconfig.server.json && medusa-admin bundle",
+    "build": "rimraf dist && tsc -p ./tsconfig.server.json",
     "watch": "tsc --watch"
   },
   "peerDependencies": {
