Apply suggestions from code review
Co-authored-by: Oli Juhl <59018053+olivermrbl@users.noreply.github.com>

--- a/packages/promotion/package.json
+++ b/packages/promotion/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@medusajs/promotions",
+  "name": "@medusajs/promotion",
   "version": "0.0.1",
   "description": "Medusa Promotions module",
   "main": "dist/index.js",
