--- a/.eslintignore
+++ b/.eslintignore
@@ -24,6 +24,7 @@ packages/*
 !packages/orchestration
 !packages/workflows-sdk
 !packages/core-flows
+!packages/workflow-orchestrator-inmemory
 
 
 **/models/*
