--- a/packages/medusa-plugin-sendgrid/package.json
+++ b/packages/medusa-plugin-sendgrid/package.json
@@ -14,37 +14,29 @@
   "author": "Oliver Juhl",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.7.5",
-    "@babel/core": "^7.7.5",
-    "@babel/node": "^7.7.4",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/plugin-transform-instanceof": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.5",
-    "@babel/register": "^7.7.4",
-    "@babel/runtime": "^7.9.6",
     "client-sessions": "^0.8.0",
-    "cross-env": "^5.2.1",
+    "cross-env": "^7.0.3",
     "jest": "^25.5.4",
     "medusa-interfaces": "^1.3.7",
-    "medusa-test-utils": "^1.1.40",
-    "typeorm": "^0.3.16"
+    "medusa-test-utils": "^1.1.41",
+    "rimraf": "^5.0.5",
+    "typeorm": "^0.3.17",
+    "typescript": "^5.3.3"
   },
   "scripts": {
-    "prepare": "cross-env NODE_ENV=production yarn run build",
+    "prepublishOnly": "cross-env NODE_ENV=production tsc --build",
     "test": "jest --passWithNoTests src",
-    "build": "babel src --out-dir . --ignore '**/__tests__','**/__mocks__'",
-    "watch": "babel -w src --out-dir . --ignore '**/__tests__','**/__mocks__'"
+    "build": "rimraf dist && tsc",
+    "watch": "tsc --watch"
   },
   "peerDependencies": {
     "medusa-interfaces": "^1.3.7",
     "typeorm": "^0.3.16"
   },
   "dependencies": {
-    "@babel/plugin-transform-classes": "^7.9.5",
-    "@sendgrid/mail": "^7.1.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
+    "@sendgrid/mail": "^8.1.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "medusa-core-utils": "^1.2.0"
   },
   "gitHead": "3bbd1e8507e00bc471de6ae3c30207999a4a4011",
