fix changeset config

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -11,7 +11,10 @@
     "integration-tests-api",
     "integration-tests-plugins",
     "integration-tests-repositories",
-    "packages/admin-next/*"
+    "packages/admin-next/admin-bundler",
+    "packages/admin-next/admin-shared",
+    "packages/admin-next/dashboard",
+    "packages/admin-next/vite-plugin-extension"
   ],
   "snapshot": {
     "useCalculatedVersion": true
