sendgrid rewrite to typescript

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,3 @@
 {
+  "i18next.i18nPaths": "c:/Users/admin/Desktop/Nouveau dossier/medusa/packages/admin-ui/ui/public/locales,c:/Users/admin/Desktop/Nouveau dossier/medusa/packages/admin-ui/ui/src/i18n"
 }
