--- a/packages/medusa-plugin-sendgrid/package.json
+++ b/packages/medusa-plugin-sendgrid/package.json
@@ -20,10 +20,11 @@
     "@medusajs/types": "^1.11.9",
     "client-sessions": "^0.8.0",
     "cross-env": "^7.0.3",
-    "jest": "^25.5.4",
+    "jest": "^29.7.0",
     "medusa-interfaces": "^1.3.7",
     "medusa-test-utils": "^1.1.41",
     "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   },
   "scripts": {
