--- a/packages/medusa-plugin-sendgrid/package.json
+++ b/packages/medusa-plugin-sendgrid/package.json
@@ -34,6 +34,7 @@
     "watch": "tsc --watch"
   },
   "peerDependencies": {
+    "@medusajs/medusa": "^1.19.0",
     "medusa-interfaces": "^1.3.7",
     "typeorm": "^0.3.16"
   },
