--- a/packages/admin-next/vite-plugin-extension/package.json
+++ b/packages/admin-next/vite-plugin-extension/package.json
@@ -17,23 +17,23 @@
     "build": "tsup"
   },
   "devDependencies": {
-    "@babel/types": "^7.23.5",
+    "@babel/types": "7.22.5",
     "@medusajs/admin-shared": "*",
-    "@types/babel__traverse": "^7.20.4",
+    "@types/babel__traverse": "7.20.5",
     "@types/node": "^20.10.4",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3",
+    "tsup": "8.0.1",
+    "typescript": "5.3.3",
     "vite": "5.0.10"
   },
   "peerDependencies": {
     "vite": "^5.0.0"
   },
   "dependencies": {
-    "@babel/parser": "^7.23.5",
-    "@babel/traverse": "^7.23.5",
-    "chokidar": "^3.5.3",
-    "fdir": "^6.1.1",
-    "magic-string": "^0.30.5"
+    "@babel/parser": "7.23.5",
+    "@babel/traverse": "7.23.5",
+    "chokidar": "3.5.3",
+    "fdir": "6.1.1",
+    "magic-string": "0.30.5"
   },
   "packageManager": "yarn@3.2.1"
 }
