--- a/packages/medusa-payment-stripe/package.json
+++ b/packages/medusa-payment-stripe/package.json
@@ -48,7 +48,7 @@
     "medusa-react": "^9.0.0"
   },
   "dependencies": {
-    "@medusajs/utils": "workspace:^",
+    "@medusajs/utils": "^1.11.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "stripe": "^11.10.0"
