--- a/packages/admin-next/admin-bundler/package.json
+++ b/packages/admin-next/admin-bundler/package.json
@@ -14,7 +14,7 @@
     "dist"
   ],
   "devDependencies": {
-    "rimraf": "^5.0.5",
+    "rimraf": "5.0.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
