--- a/packages/cart/package.json
+++ b/packages/cart/package.json
@@ -4,6 +4,7 @@
   "description": "Medusa Cart module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "private": true,
   "files": [
     "dist"
   ],
