--- a/packages/admin-ui/package.json
+++ b/packages/admin-ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@medusajs/admin-ui",
+  "name": "medusajs-admin-ui",
   "author": "Kasper Kristensen <kasper@medusajs.com>",
   "license": "MIT",
-  "version": "2.1.4",
+  "version": "2.1.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/medusajs/medusa.git",
