--- a/packages/workflow-orchestrator-inmemory/package.json
+++ b/packages/workflow-orchestrator-inmemory/package.json
@@ -53,6 +53,7 @@
     "@medusajs/modules-sdk": "^1.12.5",
     "@medusajs/types": "^1.11.9",
     "@medusajs/utils": "^1.11.2",
+    "@medusajs/workflows-sdk": "^0.1.0",
     "@mikro-orm/core": "5.7.12",
     "@mikro-orm/migrations": "5.7.12",
     "@mikro-orm/postgresql": "5.7.12",
