--- a/www/apps/docs/package.json
+++ b/www/apps/docs/package.json
@@ -30,6 +30,7 @@
     "@mdx-js/react": "3",
     "@medusajs/icons": "^1.0.0",
     "@svgr/webpack": "6.2.1",
+    "@swc/core": "^1.3.102",
     "autoprefixer": "^10.4.14",
     "clsx": "^1.1.1",
     "docs-ui": "*",
