--- a/packages/cart/package.json
+++ b/packages/cart/package.json
@@ -39,6 +39,7 @@
     "orm:cache:clear": " MIKRO_ORM_CLI=./mikro-orm.config.dev.ts mikro-orm cache:clear"
   },
   "devDependencies": {
+    "@medusajs/types": "workspace:^",
     "@mikro-orm/cli": "5.9.7",
     "cross-env": "^5.2.1",
     "jest": "^29.6.3",
@@ -51,7 +52,6 @@
   },
   "dependencies": {
     "@medusajs/modules-sdk": "^1.12.5",
-    "@medusajs/types": "^1.11.9",
     "@medusajs/utils": "^1.11.2",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
