--- a/packages/authentication/tsconfig.json
+++ b/packages/authentication/tsconfig.json
@@ -34,6 +34,9 @@
       ],
       "@types": [
         "./src/types"
+      ],
+      "@providers": [
+        "./src/providers"
       ]
     }
   },
