--- a/packages/oas/medusa-oas-cli/redocly/redocly-config.yaml
+++ b/packages/oas/medusa-oas-cli/redocly/redocly-config.yaml
@@ -13,6 +13,7 @@ decorators:
         - Order
         - Payment
         - PaymentSession
+        - SalesChannel
       ClaimImage:
         - ClaimItem
       ClaimItem:
@@ -43,6 +44,7 @@ decorators:
         - Fulfillment
       GiftCard:
         - Order
+        - Region
       GiftCardTransaction:
         - GiftCard
         - Order
@@ -73,6 +75,9 @@ decorators:
         - Refund
         - Return
         - Swap
+        - SalesChannel
+        - Region
+        - LineItem
       OrderEdit:
         - Order
       OrderItemChange:
