--- a/www/apps/api-reference/specs/admin/components/schemas/Order.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/Order.yaml
@@ -123,7 +123,7 @@ properties:
     description: The details of the region this order was created in.
     x-expandable: region
     nullable: true
-    type: object
+    $ref: ./Region.yaml
   currency_code:
     description: The 3 character currency code that is used in the order
     type: string
@@ -210,7 +210,7 @@ properties:
     x-expandable: items
     type: array
     items:
-      type: object
+      $ref: ./LineItem.yaml
   edits:
     description: The details of the order edits done on the order.
     type: array
@@ -258,7 +258,7 @@ properties:
     description: The details of the sales channel this order belongs to.
     x-expandable: sales_channel
     nullable: true
-    type: object
+    $ref: ./SalesChannel.yaml
   shipping_total:
     type: integer
     description: The total of shipping
@@ -320,7 +320,7 @@ properties:
     type: array
     x-expandable: returnable_items
     items:
-      type: object
+      $ref: ./LineItem.yaml
   created_at:
     description: The date with timezone at which the resource was created.
     type: string
@@ -346,4 +346,4 @@ properties:
     x-expandable: sales_channels
     x-featureFlag: medusa_v2
     items:
-      type: object
+      $ref: ./SalesChannel.yaml
