--- a/packages/workflow-orchestrator-inmemory/tsconfig.json
+++ b/packages/workflow-orchestrator-inmemory/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "lib": ["es5", "es6", "es2019"],
-    "target": "es6",
+    "lib": ["es2020"],
+    "target": "es2020",
     "outDir": "./dist",
     "esModuleInterop": true,
     "declarationMap": true,
