workflow orchestrator typings run method

--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -21,6 +21,7 @@
   "author": "Medusa",
   "license": "MIT",
   "devDependencies": {
+    "@medusajs/workflows-sdk": "^0.1.1",
     "awilix": "^8.0.0",
     "cross-env": "^5.2.1",
     "ioredis": "^5.2.5",
