--- a/.eslintignore
+++ b/.eslintignore
@@ -25,7 +25,7 @@ packages/*
 !packages/workflows-sdk
 !packages/core-flows
 !packages/types
-!packages/medusa-react/src/hooks
+!packages/medusa-react
 
 
 **/models/*
