--- a/packages/authentication/package.json
+++ b/packages/authentication/package.json
@@ -56,7 +56,9 @@
     "@mikro-orm/postgresql": "5.9.7",
     "awilix": "^8.0.0",
     "dotenv": "^16.1.4",
+    "jsonwebtoken": "^9.0.2",
     "knex": "2.4.2",
+    "oauth": "^0.10.0",
     "scrypt-kdf": "^2.0.1"
   }
 }
