--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,7 +1,7 @@
 # All files not owned by other teams must be reviewed by the core team
 *                                               @medusajs/core @medusajs/engineering
-/docs-util/                                     @medusajs/docs
-/www/                                           @medusajs/docs
+/docs-util/                                     @shahednasser
+/www/                                           @shahednasser
 /packages/admin                                 @medusajs/ui
 /packages/admin-ui                              @medusajs/ui
 /packages/design-system/                        @medusajs/ui
