--- a/packages/workflows-inmemory/tsconfig.json
+++ b/packages/workflows-inmemory/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "@models": ["./src/models"],
       "@services": ["./src/services"],
-      "@repositories": ["./src/repositories"]
+      "@repositories": ["./src/repositories"],
+      "@types": ["./src/types"]
     }
   },
   "include": ["src"],
