--- a/packages/modules-sdk/package.json
+++ b/packages/modules-sdk/package.json
@@ -43,5 +43,8 @@
     "build": "rimraf dist && tsc --build",
     "test": "jest --runInBand --bail --forceExit",
     "watch": "tsc --build --watch"
+  },
+  "optionalDependencies": {
+    "fastify": "^4.25.2"
   }
 }
