--- a/.github/workflows/generate-docblocks-reference.yml
+++ b/.github/workflows/generate-docblocks-reference.yml
@@ -3,7 +3,7 @@ name: Generate References for Docblocks [Automated]
 on:
   pull_request:
     branches:
-      - chore/generate-tsdocs
+      - develop
     types:
       - closed
   workflow_dispatch:
@@ -16,7 +16,7 @@ on:
 jobs:
   references:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true
+    if: startsWith(github.head_ref, 'chore/generate-tsdocs') && github.event.pull_request.merged == true
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
