--- a/.github/workflows/generate-docblocks.yml
+++ b/.github/workflows/generate-docblocks.yml
@@ -3,14 +3,14 @@ name: Generate Docblocks [Automated]
 on:
   pull_request:
     branches:
-      - changeset-release/develop
+      - develop
     types:
       - closed
   workflow_dispatch:
 
 jobs:
   generate:
-    if: github.event.pull_request.merged == true
+    if: startsWith(github.head_ref, 'changeset-release/develop') && github.event.pull_request.merged == true
     name: Generated TSDoc PRs
     runs-on: ubuntu-latest
     steps:
