--- a/.github/workflows/generate-docblocks-reference.yml
+++ b/.github/workflows/generate-docblocks-reference.yml
@@ -16,7 +16,7 @@ on:
 jobs:
   references:
     runs-on: ubuntu-latest
-    if: startsWith(github.head_ref, 'chore/generate-tsdocs') && github.event.pull_request.merged == true
+    if: github.event_name == 'workflow_dispatch' || (startsWith(github.head_ref, 'chore/generate-tsdocs') && github.event.pull_request.merged == true)
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.11.0
