--- a/.github/workflows/generate-docblocks.yml
+++ b/.github/workflows/generate-docblocks.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   generate:
-    if: startsWith(github.head_ref, 'changeset-release/develop') && github.event.pull_request.merged == true
+    if: github.event_name == 'workflow_dispatch' || (startsWith(github.head_ref, 'changeset-release/develop') && github.event.pull_request.merged == true)
     name: Generated TSDoc PRs
     runs-on: ubuntu-latest
     steps:
