--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.0.2",
     "@medusajs/icons": "latest",
-    "@medusajs/ui": "latest",
+    "@medusajs/ui": "^2.3.0",
     "@medusajs/ui-preset": "latest",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-scroll-area": "^1.0.4",
@@ -26,7 +26,7 @@
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "contentlayer": "^0.3.4",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.3.1",
     "docs-ui": "*",
     "eslint-config-docs": "*",
     "mdast-util-toc": "^7.0.0",
