fix build error

--- a/www/apps/ui/package.json
+++ b/www/apps/ui/package.json
@@ -35,6 +35,7 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.3",
     "tailwind": "*",
