--- a/packages/customer/tsconfig.json
+++ b/packages/customer/tsconfig.json
@@ -23,7 +23,7 @@
       "@models": ["./src/models"],
       "@services": ["./src/services"],
       "@repositories": ["./src/repositories"],
-      "@types": ["./src/types"],
+      "@types": ["./src/types"]
     }
   },
   "include": ["src"],
