--- a/packages/admin-next/dashboard/package.json
+++ b/packages/admin-next/dashboard/package.json
@@ -49,7 +49,7 @@
     "autoprefixer": "10.4.16",
     "postcss": "8.4.32",
     "prettier": "^3.1.1",
-    "tailwindcss": "3.3.6",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.2.2",
     "vite": "5.0.10"
   },
