--- a/packages/medusa/package.json
+++ b/packages/medusa/package.json
@@ -100,8 +100,7 @@
     "scrypt-kdf": "^2.0.1",
     "ulid": "^2.3.0",
     "uuid": "^9.0.0",
-    "winston": "^3.8.2",
-    "zod": "^3.22.4"
+    "winston": "^3.8.2"
   },
   "gitHead": "cd1f5afa5aa8c0b15ea957008ee19f1d695cbd2e"
 }
