add requestId to req

--- a/packages/medusa/tsconfig.json
+++ b/packages/medusa/tsconfig.json
@@ -17,7 +17,8 @@
     "allowJs": true,
     "skipLibCheck": true,
     "downlevelIteration": true, // to use ES5 specific tooling
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": ["node_modules/@types", "src/types/global.ts"]
   },
   "include": ["./src/**/*", "index.d.ts"],
   "exclude": [
