--- a/packages/modules-sdk/package.json
+++ b/packages/modules-sdk/package.json
@@ -45,6 +45,7 @@
     "watch": "tsc --build --watch"
   },
   "optionalDependencies": {
+    "@fastify/compress": "^7.0.0",
     "@grpc/grpc-js": "^1.9.14",
     "@grpc/proto-loader": "^0.7.10",
     "fastify": "^4.25.2",
