--- a/packages/admin-next/dashboard/package.json
+++ b/packages/admin-next/dashboard/package.json
@@ -22,6 +22,7 @@
     "@medusajs/icons": "workspace:^",
     "@medusajs/ui": "workspace:^",
     "@radix-ui/react-collapsible": "1.0.3",
+    "@radix-ui/react-hover-card": "^1.0.7",
     "@tanstack/react-query": "4.22.0",
     "@tanstack/react-table": "8.10.7",
     "@uiw/react-json-view": "2.0.0-alpha.10",
